src/snapshots/treetop_core__models__tests__assert_action_serialization__action_with_multiple_namespaces-2.snap
---
source: src/models.rs
expression: action.cedar_id()
---
namespace1::namespace2::Action::"test_action"
