src/snapshots/treetop_core__models__tests__assert_action_serialization__action_with_namespace.snap
---
source: src/models.rs
expression: serialized
---
{
  "id": "test_action",
  "namespace": [
    "namespace1"
  ]
}
